linux (NXP iMX6): update .config for 6.3

--- a/projects/NXP/devices/iMX6/linux/linux.arm.conf
+++ b/projects/NXP/devices/iMX6/linux/linux.arm.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.2.6 Kernel Configuration
+# Linux/arm 6.3.0-rc7 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="armv7a-libreelec-linux-gnueabihf-gcc-12.2.0 (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
@@ -167,6 +167,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 # CONFIG_RT_GROUP_SCHED is not set
+CONFIG_SCHED_MM_CID=y
 CONFIG_CGROUP_PIDS=y
 # CONFIG_CGROUP_RDMA is not set
 CONFIG_CGROUP_FREEZER=y
@@ -507,7 +508,6 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 #
 CONFIG_USE_OF=y
 CONFIG_ATAGS=y
-# CONFIG_UNUSED_BOARD_FILES is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
@@ -1132,7 +1132,6 @@ CONFIG_IP_NF_TARGET_MASQUERADE=m
 # CONFIG_IP_NF_TARGET_NETMAP is not set
 CONFIG_IP_NF_TARGET_REDIRECT=m
 CONFIG_IP_NF_MANGLE=m
-# CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
 # CONFIG_IP_NF_TARGET_TTL is not set
 # CONFIG_IP_NF_RAW is not set
@@ -1224,7 +1223,6 @@ CONFIG_NET_SCHED=y
 #
 # Queueing/Scheduling
 #
-# CONFIG_NET_SCH_CBQ is not set
 # CONFIG_NET_SCH_HTB is not set
 # CONFIG_NET_SCH_HFSC is not set
 # CONFIG_NET_SCH_PRIO is not set
@@ -1238,7 +1236,6 @@ CONFIG_NET_SCHED=y
 # CONFIG_NET_SCH_ETF is not set
 # CONFIG_NET_SCH_TAPRIO is not set
 # CONFIG_NET_SCH_GRED is not set
-# CONFIG_NET_SCH_DSMARK is not set
 # CONFIG_NET_SCH_NETEM is not set
 # CONFIG_NET_SCH_DRR is not set
 # CONFIG_NET_SCH_MQPRIO is not set
@@ -1263,8 +1260,6 @@ CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
 # CONFIG_NET_CLS_U32 is not set
-# CONFIG_NET_CLS_RSVP is not set
-# CONFIG_NET_CLS_RSVP6 is not set
 # CONFIG_NET_CLS_FLOW is not set
 CONFIG_NET_CLS_CGROUP=m
 # CONFIG_NET_CLS_BPF is not set
@@ -1384,10 +1379,6 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_DEBUGFS is not set
 CONFIG_CFG80211_CRDA_SUPPORT=y
 CONFIG_CFG80211_WEXT=y
-CONFIG_LIB80211=m
-CONFIG_LIB80211_CRYPT_WEP=m
-CONFIG_LIB80211_CRYPT_CCMP=m
-# CONFIG_LIB80211_DEBUG is not set
 CONFIG_MAC80211=m
 CONFIG_MAC80211_HAS_RC=y
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1469,10 +1460,8 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 #
 # DesignWare PCI Core Support
 #
-CONFIG_PCIE_DW=y
-CONFIG_PCIE_DW_HOST=y
 # CONFIG_PCIE_DW_PLAT_HOST is not set
-CONFIG_PCI_IMX6=y
+# CONFIG_PCI_IMX6_HOST is not set
 # CONFIG_PCI_LAYERSCAPE is not set
 # CONFIG_PCI_MESON is not set
 # end of DesignWare PCI Core Support
@@ -1803,7 +1792,6 @@ CONFIG_EEPROM_AT25=y
 # CONFIG_MISC_ALCOR_PCI is not set
 # CONFIG_MISC_RTSX_PCI is not set
 # CONFIG_MISC_RTSX_USB is not set
-# CONFIG_HABANA_AI is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_GP_PCI1XXXX is not set
 # end of Misc devices
@@ -2023,6 +2011,7 @@ CONFIG_NLMON=m
 # CONFIG_NET_DSA_MICROCHIP_KSZ_COMMON is not set
 CONFIG_NET_DSA_MV88E6XXX=m
 CONFIG_NET_DSA_MV88E6XXX_PTP=y
+# CONFIG_NET_DSA_MSCC_OCELOT_EXT is not set
 # CONFIG_NET_DSA_MSCC_FELIX is not set
 # CONFIG_NET_DSA_MSCC_SEVILLE is not set
 # CONFIG_NET_DSA_AR9331 is not set
@@ -2269,6 +2258,7 @@ CONFIG_MICROCHIP_PHY=y
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NXP_C45_TJA11XX_PHY is not set
 # CONFIG_NXP_TJA11XX_PHY is not set
+# CONFIG_NCN26000_PHY is not set
 CONFIG_AT803X_PHY=y
 # CONFIG_QSEMI_PHY is not set
 # CONFIG_REALTEK_PHY is not set
@@ -2729,7 +2719,7 @@ CONFIG_SERIAL_EARLYCON=y
 #
 # Non-8250 serial port support
 #
-# CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST is not set
+# CONFIG_SERIAL_EARLYCON_SEMIHOST is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 CONFIG_SERIAL_IMX=y
@@ -3101,7 +3091,6 @@ CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_POWER_SUPPLY_HWMON=y
-# CONFIG_PDA_POWER is not set
 # CONFIG_GENERIC_ADC_BATTERY is not set
 # CONFIG_IP5XXX_POWER is not set
 # CONFIG_TEST_POWER is not set
@@ -3140,6 +3129,8 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_BATTERY_GOLDFISH is not set
 # CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
+# CONFIG_CHARGER_RT9467 is not set
+# CONFIG_CHARGER_RT9471 is not set
 CONFIG_CHARGER_UCS1002=y
 # CONFIG_CHARGER_BD99954 is not set
 # CONFIG_BATTERY_UG3105 is not set
@@ -3221,6 +3212,7 @@ CONFIG_SENSORS_IIO_HWMON=y
 # CONFIG_SENSORS_MAX6650 is not set
 # CONFIG_SENSORS_MAX6697 is not set
 # CONFIG_SENSORS_MAX31790 is not set
+# CONFIG_SENSORS_MC34VR500 is not set
 # CONFIG_SENSORS_MCP3021 is not set
 # CONFIG_SENSORS_TC654 is not set
 # CONFIG_SENSORS_TPS23861 is not set
@@ -3391,7 +3383,6 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_BD9571MWV is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_MADERA is not set
-# CONFIG_MFD_ASIC3 is not set
 # CONFIG_PMIC_DA903X is not set
 CONFIG_PMIC_DA9052=y
 # CONFIG_MFD_DA9052_SPI is not set
@@ -3407,7 +3398,6 @@ CONFIG_MFD_MC13XXX_SPI=y
 CONFIG_MFD_MC13XXX_I2C=y
 # CONFIG_MFD_MP2629 is not set
 # CONFIG_MFD_HI6421_PMIC is not set
-# CONFIG_HTC_PASIC3 is not set
 # CONFIG_LPC_ICH is not set
 # CONFIG_LPC_SCH is not set
 # CONFIG_MFD_IQS62X is not set
@@ -3485,9 +3475,6 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_WL1273_CORE is not set
 # CONFIG_MFD_LM3533 is not set
 # CONFIG_MFD_TC3589X is not set
-# CONFIG_MFD_T7L66XB is not set
-# CONFIG_MFD_TC6387XB is not set
-# CONFIG_MFD_TC6393XB is not set
 # CONFIG_MFD_TQMX86 is not set
 # CONFIG_MFD_VX855 is not set
 # CONFIG_MFD_LOCHNAGAR is not set
@@ -3506,7 +3493,7 @@ CONFIG_MFD_WM8994=y
 # CONFIG_MFD_ATC260X_I2C is not set
 # CONFIG_MFD_QCOM_PM8008 is not set
 CONFIG_RAVE_SP_CORE=y
-# CONFIG_MFD_INTEL_M10_BMC is not set
+# CONFIG_MFD_INTEL_M10_BMC_SPI is not set
 # CONFIG_MFD_RSMU_I2C is not set
 # CONFIG_MFD_RSMU_SPI is not set
 # end of Multifunction device drivers
@@ -3542,6 +3529,7 @@ CONFIG_REGULATOR_GPIO=y
 # CONFIG_REGULATOR_MAX8952 is not set
 # CONFIG_REGULATOR_MAX8973 is not set
 # CONFIG_REGULATOR_MAX20086 is not set
+# CONFIG_REGULATOR_MAX20411 is not set
 # CONFIG_REGULATOR_MAX77826 is not set
 CONFIG_REGULATOR_MC13XXX_CORE=y
 CONFIG_REGULATOR_MC13783=y
@@ -3911,6 +3899,7 @@ CONFIG_VIDEO_IMX_VDOA=y
 # CONFIG_SMS_SDIO_DRV is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
 # CONFIG_DVB_TEST_DRIVERS is not set
+CONFIG_UVC_COMMON=m
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_V4L2=y
 CONFIG_VIDEOBUF2_MEMOPS=y
@@ -3942,11 +3931,13 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_VIDEO_IMX258 is not set
 # CONFIG_VIDEO_IMX274 is not set
 # CONFIG_VIDEO_IMX290 is not set
+# CONFIG_VIDEO_IMX296 is not set
 # CONFIG_VIDEO_IMX319 is not set
 # CONFIG_VIDEO_IMX334 is not set
 # CONFIG_VIDEO_IMX335 is not set
 # CONFIG_VIDEO_IMX355 is not set
 # CONFIG_VIDEO_IMX412 is not set
+# CONFIG_VIDEO_IMX415 is not set
 # CONFIG_VIDEO_MT9M001 is not set
 # CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9M111 is not set
@@ -3983,6 +3974,7 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_VIDEO_OV772X is not set
 # CONFIG_VIDEO_OV7740 is not set
 # CONFIG_VIDEO_OV8856 is not set
+# CONFIG_VIDEO_OV8858 is not set
 # CONFIG_VIDEO_OV8865 is not set
 # CONFIG_VIDEO_OV9282 is not set
 # CONFIG_VIDEO_OV9640 is not set
@@ -4395,9 +4387,6 @@ CONFIG_DRM_SCHED=y
 # CONFIG_DRM_AST is not set
 # CONFIG_DRM_MGAG200 is not set
 # CONFIG_DRM_ARMADA is not set
-# CONFIG_DRM_RCAR_DW_HDMI is not set
-# CONFIG_DRM_RCAR_USE_LVDS is not set
-# CONFIG_DRM_RCAR_USE_MIPI_DSI is not set
 # CONFIG_DRM_OMAP is not set
 # CONFIG_DRM_TILCDC is not set
 # CONFIG_DRM_QXL is not set
@@ -4412,6 +4401,7 @@ CONFIG_DRM_PANEL=y
 # CONFIG_DRM_PANEL_ABT_Y030XX067A is not set
 # CONFIG_DRM_PANEL_ARM_VERSATILE is not set
 # CONFIG_DRM_PANEL_ASUS_Z00T_TM5P5_NT35596 is not set
+# CONFIG_DRM_PANEL_AUO_A030JTN01 is not set
 # CONFIG_DRM_PANEL_BOE_BF060Y8M_AJ0 is not set
 # CONFIG_DRM_PANEL_BOE_HIMAX8279D is not set
 # CONFIG_DRM_PANEL_BOE_TV101WUM_NL6 is not set
@@ -4423,6 +4413,7 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_ELIDA_KD35T133 is not set
 # CONFIG_DRM_PANEL_FEIXIN_K101_IM2BA02 is not set
 # CONFIG_DRM_PANEL_FEIYANG_FY07024DI26A30D is not set
+# CONFIG_DRM_PANEL_HIMAX_HX8394 is not set
 # CONFIG_DRM_PANEL_ILITEK_IL9322 is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9341 is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9881C is not set
@@ -4448,6 +4439,7 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_NOVATEK_NT39016 is not set
 # CONFIG_DRM_PANEL_MANTIX_MLAF057WE51 is not set
 # CONFIG_DRM_PANEL_OLIMEX_LCD_OLINUXINO is not set
+# CONFIG_DRM_PANEL_ORISETECH_OTA5601A is not set
 # CONFIG_DRM_PANEL_ORISETECH_OTM8009A is not set
 # CONFIG_DRM_PANEL_OSD_OSD101T2587_53TS is not set
 # CONFIG_DRM_PANEL_PANASONIC_VVX10F034N00 is not set
@@ -4481,6 +4473,7 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_TPO_TPG110 is not set
 # CONFIG_DRM_PANEL_TRULY_NT35597_WQXGA is not set
 # CONFIG_DRM_PANEL_VISIONOX_RM69299 is not set
+# CONFIG_DRM_PANEL_VISIONOX_VTDR6130 is not set
 # CONFIG_DRM_PANEL_WIDECHIPS_WS2401 is not set
 # CONFIG_DRM_PANEL_XINPENG_XPP055C272 is not set
 # end of Display Panels
@@ -4491,7 +4484,6 @@ CONFIG_DRM_PANEL_BRIDGE=y
 #
 # Display Interface Bridges
 #
-# CONFIG_DRM_CDNS_DSI is not set
 # CONFIG_DRM_CHIPONE_ICN6211 is not set
 # CONFIG_DRM_CHRONTEL_CH7033 is not set
 # CONFIG_DRM_DISPLAY_CONNECTOR is not set
@@ -4527,6 +4519,7 @@ CONFIG_DRM_TOSHIBA_TC358767=y
 # CONFIG_DRM_ANALOGIX_ANX78XX is not set
 # CONFIG_DRM_ANALOGIX_ANX7625 is not set
 # CONFIG_DRM_I2C_ADV7511 is not set
+# CONFIG_DRM_CDNS_DSI is not set
 # CONFIG_DRM_CDNS_MHDP8546 is not set
 # CONFIG_DRM_IMX8QM_LDB is not set
 # CONFIG_DRM_IMX8QXP_LDB is not set
@@ -4656,6 +4649,7 @@ CONFIG_LCD_PLATFORM=y
 # CONFIG_LCD_OTM3225A is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_KTD253 is not set
+# CONFIG_BACKLIGHT_KTZ8866 is not set
 CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_DA9052 is not set
 # CONFIG_BACKLIGHT_QCOM_WLED is not set
@@ -4879,6 +4873,7 @@ CONFIG_SND_SOC_AK4458=m
 CONFIG_SND_SOC_AK5558=m
 # CONFIG_SND_SOC_ALC5623 is not set
 # CONFIG_SND_SOC_AW8738 is not set
+# CONFIG_SND_SOC_AW88395 is not set
 # CONFIG_SND_SOC_BD28623 is not set
 # CONFIG_SND_SOC_BT_SCO is not set
 # CONFIG_SND_SOC_CS35L32 is not set
@@ -4921,6 +4916,7 @@ CONFIG_SND_SOC_ES8328_SPI=y
 # CONFIG_SND_SOC_GTM601 is not set
 # CONFIG_SND_SOC_HDA is not set
 # CONFIG_SND_SOC_ICS43432 is not set
+# CONFIG_SND_SOC_IDT821034 is not set
 # CONFIG_SND_SOC_INNO_RK3036 is not set
 # CONFIG_SND_SOC_MAX98088 is not set
 # CONFIG_SND_SOC_MAX98357A is not set
@@ -4946,6 +4942,7 @@ CONFIG_SND_SOC_ES8328_SPI=y
 # CONFIG_SND_SOC_PCM5102A is not set
 # CONFIG_SND_SOC_PCM512x_I2C is not set
 # CONFIG_SND_SOC_PCM512x_SPI is not set
+# CONFIG_SND_SOC_PEB2466 is not set
 # CONFIG_SND_SOC_RK3328 is not set
 # CONFIG_SND_SOC_RT5616 is not set
 # CONFIG_SND_SOC_RT5631 is not set
@@ -4955,6 +4952,7 @@ CONFIG_SND_SOC_ES8328_SPI=y
 CONFIG_SND_SOC_SGTL5000=y
 # CONFIG_SND_SOC_SIMPLE_AMPLIFIER is not set
 # CONFIG_SND_SOC_SIMPLE_MUX is not set
+# CONFIG_SND_SOC_SMA1303 is not set
 # CONFIG_SND_SOC_SPDIF is not set
 # CONFIG_SND_SOC_SRC4XXX_I2C is not set
 # CONFIG_SND_SOC_SSM2305 is not set
@@ -5043,10 +5041,7 @@ CONFIG_SND_SIMPLE_CARD=y
 # CONFIG_SND_AUDIO_GRAPH_CARD is not set
 # CONFIG_SND_AUDIO_GRAPH_CARD2 is not set
 # CONFIG_SND_TEST_COMPONENT is not set
-
-#
-# HID support
-#
+CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
@@ -5081,6 +5076,7 @@ CONFIG_HID_APPLE=y
 # CONFIG_HID_ELAN is not set
 # CONFIG_HID_ELECOM is not set
 # CONFIG_HID_ELO is not set
+# CONFIG_HID_EVISION is not set
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_FT260 is not set
 # CONFIG_HID_GEMBIRD is not set
@@ -5162,6 +5158,11 @@ CONFIG_SONY_FF=y
 # end of Special HID drivers
 
 #
+# HID-BPF support
+#
+# end of HID-BPF support
+
+#
 # USB HID support
 #
 CONFIG_USB_HID=y
@@ -5169,15 +5170,10 @@ CONFIG_USB_HID=y
 # CONFIG_USB_HIDDEV is not set
 # end of USB HID support
 
-#
-# I2C HID support
-#
+CONFIG_I2C_HID=y
 # CONFIG_I2C_HID_OF is not set
 # CONFIG_I2C_HID_OF_ELAN is not set
 # CONFIG_I2C_HID_OF_GOODIX is not set
-# end of I2C HID support
-# end of HID support
-
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
@@ -5716,7 +5712,6 @@ CONFIG_RTC_I2C_AND_SPI=y
 # CONFIG_RTC_DRV_MSM6242 is not set
 # CONFIG_RTC_DRV_BQ4802 is not set
 # CONFIG_RTC_DRV_RP5C01 is not set
-# CONFIG_RTC_DRV_V3020 is not set
 # CONFIG_RTC_DRV_ZYNQMP is not set
 
 #
@@ -5729,6 +5724,7 @@ CONFIG_RTC_DRV_MC13XXX=y
 CONFIG_RTC_DRV_MXC=y
 # CONFIG_RTC_DRV_MXC_V2 is not set
 CONFIG_RTC_DRV_SNVS=y
+# CONFIG_RTC_DRV_BBNSM is not set
 # CONFIG_RTC_DRV_R7301 is not set
 
 #
@@ -5756,13 +5752,13 @@ CONFIG_MX3_IPU=y
 CONFIG_MX3_IPU_IRQS=4
 # CONFIG_NBPFAXI_DMA is not set
 # CONFIG_PLX_DMA is not set
+# CONFIG_XILINX_XDMA is not set
 # CONFIG_XILINX_ZYNQMP_DPDMA is not set
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCOM_HIDMA is not set
 # CONFIG_DW_DMAC is not set
 # CONFIG_DW_DMAC_PCI is not set
 # CONFIG_DW_EDMA is not set
-# CONFIG_DW_EDMA_PCIE is not set
 # CONFIG_SF_PDMA is not set
 
 #
@@ -5811,7 +5807,6 @@ CONFIG_STAGING=y
 # CONFIG_RTLLIB is not set
 # CONFIG_RTL8723BS is not set
 # CONFIG_R8712U is not set
-CONFIG_R8188EU=m
 # CONFIG_RTS5208 is not set
 # CONFIG_VT6655 is not set
 # CONFIG_VT6656 is not set
@@ -6003,6 +5998,8 @@ CONFIG_IMX_GPCV2_PM_DOMAINS=y
 # CONFIG_LITEX_SOC_CONTROLLER is not set
 # end of Enable LiteX SoC Builder specific drivers
 
+# CONFIG_WPCM450_SOC is not set
+
 #
 # Qualcomm SoC drivers
 #
@@ -6126,6 +6123,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_INA2XX_ADC is not set
 CONFIG_IMX7D_ADC=y
 # CONFIG_IMX8QXP_ADC is not set
+# CONFIG_IMX93_ADC is not set
 # CONFIG_LTC2471 is not set
 # CONFIG_LTC2485 is not set
 # CONFIG_LTC2496 is not set
@@ -6153,11 +6151,13 @@ CONFIG_IMX7D_ADC=y
 # CONFIG_TI_ADC128S052 is not set
 # CONFIG_TI_ADC161S626 is not set
 # CONFIG_TI_ADS1015 is not set
+# CONFIG_TI_ADS7924 is not set
 # CONFIG_TI_ADS7950 is not set
 # CONFIG_TI_ADS8344 is not set
 # CONFIG_TI_ADS8688 is not set
 # CONFIG_TI_ADS124S08 is not set
 # CONFIG_TI_ADS131E08 is not set
+# CONFIG_TI_LMP92064 is not set
 # CONFIG_TI_TLC4541 is not set
 # CONFIG_TI_TSC2046 is not set
 CONFIG_VF610_ADC=y
@@ -6260,6 +6260,7 @@ CONFIG_VF610_ADC=y
 # CONFIG_LTC2632 is not set
 # CONFIG_M62332 is not set
 # CONFIG_MAX517 is not set
+# CONFIG_MAX5522 is not set
 # CONFIG_MAX5821 is not set
 # CONFIG_MCP4725 is not set
 # CONFIG_MCP4922 is not set
@@ -6434,6 +6435,7 @@ CONFIG_VF610_ADC=y
 # CONFIG_SENSORS_HMC5843_SPI is not set
 # CONFIG_SENSORS_RM3100_I2C is not set
 # CONFIG_SENSORS_RM3100_SPI is not set
+# CONFIG_TI_TMAG5273 is not set
 # CONFIG_YAMAHA_YAS530 is not set
 # end of Magnetometer sensors
 
@@ -6670,6 +6672,7 @@ CONFIG_PM_OPP=y
 CONFIG_DCACHE_WORD_ACCESS=y
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_FS_IOMAP=y
+CONFIG_LEGACY_DIRECT_IO=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
@@ -6847,6 +6850,7 @@ CONFIG_NFS_ACL_SUPPORT=y
 CONFIG_NFS_COMMON=y
 CONFIG_SUNRPC=y
 CONFIG_SUNRPC_GSS=y
+CONFIG_RPCSEC_GSS_KRB5=y
 # CONFIG_SUNRPC_DEBUG is not set
 # CONFIG_CEPH_FS is not set
 # CONFIG_CIFS is not set
@@ -7406,10 +7410,10 @@ CONFIG_HAVE_KCSAN_COMPILER=y
 # CONFIG_DEBUG_PAGE_REF is not set
 # CONFIG_DEBUG_RODATA_TEST is not set
 # CONFIG_DEBUG_WX is not set
-# CONFIG_DEBUG_OBJECTS is not set
-# CONFIG_SHRINKER_DEBUG is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
+# CONFIG_DEBUG_OBJECTS is not set
+# CONFIG_SHRINKER_DEBUG is not set
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_VM is not set
@@ -7506,6 +7510,7 @@ CONFIG_PROVE_RCU=y
 # CONFIG_RCU_REF_SCALE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 CONFIG_RCU_EXP_CPU_STALL_TIMEOUT=0
+# CONFIG_RCU_CPU_STALL_CPUTIME is not set
 CONFIG_RCU_TRACE=y
 # CONFIG_RCU_EQS_DEBUG is not set
 # end of RCU Debugging
@@ -7559,6 +7564,7 @@ CONFIG_ARCH_HAS_KCOV=y
 CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_KCOV is not set
 CONFIG_RUNTIME_TESTING_MENU=y
+# CONFIG_TEST_DHRY is not set
 # CONFIG_LKDTM is not set
 # CONFIG_TEST_MIN_HEAP is not set
 # CONFIG_TEST_DIV64 is not set
